init project, add error middleware and add patching docs

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-SANDBOX_IDS=DRAFI_LNCH_PDC_UC_A,DRAFI_IP_LNCH_PDC_A
+SANDBOX_IDS=DRAFI_LNCH_PDC_UC_A,DRAFI_IP_LNCH_PDC_A,DRAFI_LNCH_PDC_ROCKY_A
+ENVIRONMENT=develop
+UBI_APPID=b5f1619b-8612-4966-a083-2fac253e2090
